[package]
name = "WinAPI"
version = "0.1.0"
edition = "2024"

[dependencies]
windows = { version = "0.61.3" , features = [
                                              "Win32_System_Memory",
                                              "Win32_UI_WindowsAndMessaging"
                                            ]}
