[package]
name = "resource_loader"
version = "0.1.0"
edition = "2024"

[build-dependencies]
embed-resource = "2.5"

[dependencies]
windows = {version = "0.61.3", features = ["Win32_Foundation","Win32_System_LibraryLoader", "Win32_Media_KernelStreaming", "Win32_UI_WindowsAndMessaging", "Win32_System_Memory", "Win32_Security", "Win32_System_Threading"]}
